# thedush_skid

./: LICENSE  README.md
skid_control/: CMakeLists.txt  package.xml
skid_control/config/: skid_drive_control.yaml
skid_control/launch/: skid_drive_common.launch
