<?xml version="1.0"?>
<package>
  <name>skid_control</name>
  <version>1.1.3</version>
  <description>
		This package contains the launch files that load the required controller interfaces for simulation in Gazebo.
  </description>

 
  
  <maintainer email="Navaneeth@asimov.com">Navaneeth</maintainer>
 

  <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
  
 
  <run_depend>robot_state_publisher</run_depend>
  <!-- <run_depend>summit_xl_pad</run_depend> -->
  <run_depend>twist_mux</run_depend>  

</package>
